hw1 database error 500

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=school4
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/hogwarts4
+spring.datasource.username=postgres
+spring.datasource.password=PostParolGres
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.show-sql=true
