--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.application.name=school4
 spring.datasource.url=jdbc:postgresql://localhost:5432/hogwarts4
 spring.datasource.username=postgres
 spring.datasource.password=PostParolGres
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
